removing search from pom b/c it's having issues with poi

--- a/custom_builds/6/distros/2.9.x/pom.xml
+++ b/custom_builds/6/distros/2.9.x/pom.xml
@@ -76,7 +76,7 @@
                 <module>profile2</module>
                 <module>reset-pass</module>
                 <module>samigo</module>
-                <module>search</module>
+                <!--module>search</module-->
                 <module>shortenedurl</module>
                 <module>sitestats</module>
                 
