--- a/samigo/SAM-1263/samigo-app/sakai-samigo/webapp/WEB-INF/web.xml
+++ b/samigo/SAM-1263/samigo-app/sakai-samigo/webapp/WEB-INF/web.xml
@@ -118,6 +118,14 @@
     <dispatcher>FORWARD</dispatcher>
     <dispatcher>INCLUDE</dispatcher>
   </filter-mapping>
+  
+  <filter-mapping>
+    <filter-name>Upload Filter</filter-name>
+    <url-pattern>/jsf/author/item/*</url-pattern>
+    <dispatcher>REQUEST</dispatcher>
+    <dispatcher>FORWARD</dispatcher>
+    <dispatcher>INCLUDE</dispatcher>
+  </filter-mapping>
 
 <!--
   <filter-mapping>
