hotspot imagemap question type

--- a/custom_builds/60/samigo/samigo-2.9.x_features-backport/samigo-app/src/java/org/sakaiproject/tool/assessment/bundle/EvaluationMessages.properties
+++ b/custom_builds/60/samigo/samigo-2.9.x_features-backport/samigo-app/src/java/org/sakaiproject/tool/assessment/bundle/EvaluationMessages.properties
@@ -187,6 +187,7 @@ q_match=Matching
 q_short_ess=Short Answer/Essay
 q_tf=True/False Question
 q_matrix_choices_surv=Survey: Matrix of Choices
+q_imq=Hot Spot
 file=File
 browse=Browse
 upload=Upload
@@ -242,6 +243,7 @@ t_fileUpload=Display File Upload
 t_toggleDiv= Expand/Collapse Part
 t_retake=Retake
 t_modelShortAnswer=Model Short Answer
+t_hotspotanswer=Show Student response on image
 # alt tag for images: starts with alt_
 alt_recording=Recording
 alt_correct=Correct
@@ -302,3 +304,19 @@ number_format_error_submission_id=You must enter a real number to adjust the sco
 data_discrepancy_title=Data Discrepancy
 data_discrepancy_1=You are seeing this page  because you are grading this assessement in multiple browser windows. 
 data_discrepancy_2=Please close all windows except one.
+
+show_hotspotanswer=On Image
+
+
+for=for
+forAllSectionsGroups=for Entire Site
+allSectionsGroups=All Sections/Groups
+with=with
+
+title_download_file_submissions=Download File Submissions
+download_responses_to=Download responses to
+select_all=Select All
+for_all_sections_groups=for entire site
+for_selected_sections_groups=for selected section(s)/group(s)
+download=Download
+
