--- a/custom_builds/19/distros/2.9.x/pom.xml
+++ b/custom_builds/19/distros/2.9.x/pom.xml
@@ -140,8 +140,8 @@
 		<module>melete</module>
 		<module>roster2</module>
 		<module>signup</module>
-                <module>scorm-wicket</module>
-                <module>scorm</module>
+                <!--module>scorm-wicket</module>
+                <module>scorm</module-->
 	    </modules>
         </profile>
         <profile>
