adding da_evalprovider

--- a/custom_builds/118/distros/2.9.x/pom.xml
+++ b/custom_builds/118/distros/2.9.x/pom.xml
@@ -131,6 +131,7 @@
                 <module>blogwow</module>
                 <module>hierarchy</module>
                 <module>evaluation</module>
+                <module>da_evalprovider</module>
                 <module>bigbluebutton-sakai/bbb-tool</module>
             </modules>
         </profile>
