Updating version to portal.version

--- a/gradebook/gradebook-2.9.x_iRubric/app/ui/pom.xml
+++ b/gradebook/gradebook-2.9.x_iRubric/app/ui/pom.xml
@@ -307,7 +307,7 @@
 	<dependency>
 		<groupId>org.sakaiproject.portal</groupId>
 		<artifactId>sakai-portal-util</artifactId>
-		<version>${sakai.version}</version>
+		<version>${sakai.portal.version}</version>
 	</dependency>
 
 	<dependency>
