Backport of SAK-22384

--- a/custom_builds/67/site-manage/site-manage-2.9.x_custom/site-manage-tool/tool/src/bundle/sitesetupgeneric.properties
+++ b/custom_builds/67/site-manage/site-manage-2.9.x_custom/site-manage-tool/tool/src/bundle/sitesetupgeneric.properties
@@ -762,7 +762,7 @@ sitegen.siteinfolist.role = Role
 sitegen.siteinfolist.role.select = Select role for
 sitegen.siteinfolist.status = Status
 sitegen.siteinfolist.status.select = Select status for
-sitegen.siteinfolist.remove = Remove
+sitegen.siteinfolist.remove = Remove?
 ### (moot) sitegen.siteinfolist.need = need a better way of handling null names - in any case - need to avoid rendering ", " if there is none associated with an entry
 sitegen.siteinfolist.active = Active
 sitegen.siteinfolist.inactive = Inactive
@@ -1099,4 +1099,17 @@ daAccess.tableheader.restrictedTools=Restricted Tools
 
 importQueued=Your import process has been queued. You should receive an email when the import has completed. The email should appear within 15 minutes. Until you receive this email no imported material will appear in this course.
 importQueuedNoEmail=Your import process has been queued. Please allow up to 15 minutes for the site import process to finish.
+
+sinfo.enableMathJax.website=MathJax
+sinfo.enableMathJax.instr1={0} can use
+sinfo.enableMathJax.instr2=technology to display equations written in LaTeX. Select from the options below to enable this feature in this site.
+sinfo.mathjax.isEnabled=You have enabled the display of LaTeX math in 
+
+# SAK-22384 MathJax support
+sinfo.mathjax.name=LaTeX
+sinfo.mathjax.allowForSite=Allow the display of LaTeX math in this site. Use the Edit Tools page to select the tools for which this setting applies.
+sinfo.mathjax.instructions={0} can display math equations written in LaTeX. Use $$ or \\( and \\) as delimiters around your LaTeX code. Select the tools for which math will be displayed below.
+sinfo.mathjax.confirmEnabled=You have enabled the display of LaTeX math in
+sinfo.mathjax.allowed=Enabled. See the Edit Tools page for the specific tools this setting applies to.
+sinfo.mathjax.notAllowed=Disabled
 
