--- a/custom_builds/60/samigo/samigo-2.9.x_features-backport/pom.xml
+++ b/custom_builds/60/samigo/samigo-2.9.x_features-backport/pom.xml
@@ -12,13 +12,19 @@
 	<name>Sakai Samigo Project (base POM)</name>
 	<groupId>org.sakaiproject.samigo</groupId>
 	<artifactId>samigo</artifactId>
-	<version>2.9.3-SNAPSHOT</version>
+	<version>2.9.4-SNAPSHOT</version>
 	<packaging>pom</packaging>
+	<!-- If you are doing development on this jar you need to set this to ${project.version} or use the samigo-audio profile.
+		 It has to use a released signed version otherwise it doesn't work.
+    -->
+	<properties>
+		<samigo.audio.version>2.9.3</samigo.audio.version>
+	</properties>
     
 	<modules>
 		<module>samigo-api</module>
+		<!--module>samigo-audio</module--><!-- see https://jira.sakaiproject.org/browse/SAM-1997 -->
 		<module>samigo-app</module>
-		<module>samigo-audio</module>
 		<module>samigo-deploy</module>
 		<module>samigo-help</module>
 		<module>samigo-hibernate</module>
@@ -29,6 +35,47 @@
 		<module>samigo-archive/sam-handlers</module>
 		<module>samlite-impl</module>
 	</modules>
+	
+	<profiles>
+		<profile>
+			<!-- 
+			* This profile is activated by the Sakai CLE release team when releases are being created, 
+			and will build/sign the jar if you have the correct keystore and credentials.
+			* See the samigo-audio/pom.xml for the information that is required to sign it.
+			* For all other builds, the jar will be downloaded from the remote Maven repo, 
+			where it is already signed by the Sakai Foundation.
+			* If you build this jar yourself without supplying the keystore and credentials,
+			the signing will fail and users may get Java prompts when using the audio module.
+			* See: https://jira.sakaiproject.org/browse/SAM-1837
+			* To verify the jar once it is signed, find the jar and run: 'jarsigner -verify samigo-audio-VERSION.jar'
+			-->
+			<id>jarsign</id>
+			<activation>
+				<activeByDefault>false</activeByDefault>
+			</activation>
+			<modules>
+				<module>samigo-audio</module>
+			</modules>
+			<properties>
+				<samigo.audio.version>${project.version}</samigo.audio.version>
+			</properties>
+		</profile>
+		<!-- Use this profile if you want to develop on samigo audio -->
+		<profile>
+			<id>samigo-audio</id>
+			<activation>
+				<activeByDefault>false</activeByDefault>
+			</activation>
+			<modules>
+				<module>samigo-audio</module>
+			</modules>
+			<properties>
+				<samigo.audio.version>${project.version}</samigo.audio.version>
+			</properties>
+		</profile>
+
+	</profiles>
+        
 	
 	<scm>
 		<connection>scm:svn:https://source.sakaiproject.org/svn/sam/branches/samigo-2.9.x</connection>
@@ -41,7 +88,7 @@
             <dependency>
                 <groupId>org.sakaiproject.samigo</groupId>
                 <artifactId>samigo-audio</artifactId>
-                <version>${project.version}</version>
+                <version>${samigo.audio.version}</version>
                 <type>jar</type>
                 <scope>provided</scope>
             </dependency>
