--- a/custom_builds/60/samigo/samigo-2.9.x_features-backport/samigo-audio/pom.xml
+++ b/custom_builds/60/samigo/samigo-2.9.x_features-backport/samigo-audio/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.sakaiproject.samigo</groupId>
         <artifactId>samigo</artifactId>
-        <version>2.9.3-SNAPSHOT</version>
+        <version>2.9.4-SNAPSHOT</version>
     </parent>
 
     <name>Sakai Samigo Audio Recorder (samigo-audio)</name>
@@ -61,6 +61,12 @@
 							<keypass>faveS24v</keypass>
                             <storepass>faveS24v</storepass>
                             <verify>true</verify>
+                            <archive>
+								<index>true</index>
+								<manifestEntries>
+									<Permissions>all-permissions</Permissions>
+								</manifestEntries>
+							</archive>
                         </configuration>
                     </plugin>
                 </plugins>
