Adding etudes-util and ambrosia to pom

--- a/custom_builds/10/distros/2.9.x/pom.xml
+++ b/custom_builds/10/distros/2.9.x/pom.xml
@@ -134,6 +134,9 @@
                 <module>evaluation</module>
                 <module>melete</module>
                 <module>signup</module>
+                <module>mneme</module>
+                <module>ambrosia</module>
+                <module>etudes-util</module>
             </modules>
         </profile>
         <profile>
