comment out hybrid

--- a/custom_builds/78/providers/sakai-2.9.x/pom.xml
+++ b/custom_builds/78/providers/sakai-2.9.x/pom.xml
@@ -29,7 +29,7 @@
     <module>kerberos</module>
     <module>openldap</module>
     <module>sample</module>
-    <module>hybrid</module>
+    <!-- module>hybrid</module -->
     <module>imis</module>
   </modules>
   <dependencyManagement>
