--- a/melete/melete-2.8.2_sak29x_features-backport/melete-impl/pom.xml
+++ b/melete/melete-2.8.2_sak29x_features-backport/melete-impl/pom.xml
@@ -85,7 +85,7 @@
     <dependency>
       <groupId>org.sakaiproject.calendar</groupId>
       <artifactId>sakai-calendar-api</artifactId>
-      <version>${sakai.version}</version> 
+      <version>${sakai.calendar.version}</version> 
     </dependency>
 <!-- for hibernate -->
     <dependency>
