--- a/custom_builds/78/providers/sakai-2.9.x/imis/pom.xml
+++ b/custom_builds/78/providers/sakai-2.9.x/imis/pom.xml
@@ -34,7 +34,10 @@
     <dependency>
       <groupId>commons-logging</groupId>
       <artifactId>commons-logging</artifactId>
-      <version>1.0.4</version>
+    </dependency>
+    <dependency>
+      <groupId>commons-lang</groupId>
+      <artifactId>commons-lang</artifactId>
     </dependency>
 <!--org.sakaiprojectsakai-authz-api${sakai.version}-->
 <!--org.sakaiprojectsakai-entity-api${sakai.version}-->
