Trying to get build working

--- a/custom_builds/139/distros/10.x/pom.xml
+++ b/custom_builds/139/distros/10.x/pom.xml
@@ -94,6 +94,7 @@
                 <module>rights</module>
                 <module>roster2</module>
                 <module>rwiki</module>
+                <module>sakai-mock</module>
                 <module>samigo</module>
                 <module>search</module>
                 <module>sections</module>
