--- a/archive/archive-2.9.x-backport/pom.xml
+++ b/archive/archive-2.9.x-backport/pom.xml
@@ -64,6 +64,18 @@
         <artifactId>sakai-import-announcement</artifactId>
         <version>2.9-SNAPSHOT</version>
       </dependency>
+      <dependency>
+        <groupId>org.sakaiproject.edu-services.course-management</groupId>
+        <artifactId>coursemanagement-api</artifactId>
+        <version>${project.version}</version>
+        <scope>provided</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.projectlombok</groupId>
+        <artifactId>lombok</artifactId>
+        <version>${sakai.lombok.version}</version>
+        <scope>provided</scope>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 </project>
