--- a/common/common-1.2.x-backport/pom.xml
+++ b/common/common-1.2.x-backport/pom.xml
@@ -138,6 +138,16 @@
                 <artifactId>commons-beanutils</artifactId>
                 <version>1.7.0</version>
             </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-compress</artifactId>
+                <version>1.6</version>
+            </dependency>
+            <dependency>
+                <groupId>commons-codec</groupId>
+                <artifactId>commons-codec</artifactId>
+                <version>1.8</version>
+            </dependency>
             <!--
                 defined by master <dependency>
                 <groupId>commons-logging</groupId>
