--- a/archive/archive-2.9.x-backport/pom.xml
+++ b/archive/archive-2.9.x-backport/pom.xml
@@ -67,13 +67,13 @@
       <dependency>
         <groupId>org.sakaiproject.edu-services.course-management</groupId>
         <artifactId>coursemanagement-api</artifactId>
-        <version>${project.version}</version>
+        <version>${sakai.edu-services.version}</version>
         <scope>provided</scope>
       </dependency>
       <dependency>
         <groupId>org.projectlombok</groupId>
         <artifactId>lombok</artifactId>
-        <version>${sakai.lombok.version}</version>
+        <version>0.10.6</version>
         <scope>provided</scope>
       </dependency>
     </dependencies>
