--- a/custom_builds/51/site-manage/branches/sakai-2.9.x/site-manage-tool/tool/src/bundle/sitesetupgeneric.properties
+++ b/custom_builds/51/site-manage/branches/sakai-2.9.x/site-manage-tool/tool/src/bundle/sitesetupgeneric.properties
@@ -1097,3 +1097,21 @@ daAccess.tableheader.realm=Realm
 daAccess.tableheader.role=Role
 daAccess.tableheader.restrictedTools=Restricted Tools
 
+importQueued=Your import process has been queued. You should receive an email when the import has completed. The email should appear within 15 minutes. Until you receive this email no imported material will appear in this course.
+importQueuedNoEmail=Your import process has been queued. Please allow up to 15 minutes for the site import process to finish.
+
+# for creating site from archive
+archive.createsite = Create site from archive
+archive.createsite.info = <b>Creating a site from Archive</b> allows you to upload an existing site archive as a base for your new site.
+archive.createsite.info.2 = Content from the site archive will be imported into the new site.
+archive.createsite.type = New site type
+archive.createsite.term = New site term
+archive.createsite.choose = Choose archive
+archive.createsite.upload = Upload archive
+archive.createsite.missingfile = You must upload a site archive zip file
+archive.createsite.invalidfile = Invalid file
+archive.createsite.missingtype = You must select the new site type
+archive.createsite.failedupload = An error occurred uploading the archive.
+archive.createsite.failedmerge = An error occurred merging the archive contents.
+archive.createsite.confirm = Creating site from archive
+archive.createsite.confirm.none = None
