--- a/custom_builds/51/site-manage/branches/sakai-2.9.x/site-manage-tool/tool/pom.xml
+++ b/custom_builds/51/site-manage/branches/sakai-2.9.x/site-manage-tool/tool/pom.xml
@@ -98,6 +98,10 @@
             <artifactId>servlet-api</artifactId>
         </dependency>
         <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.jmock</groupId>
             <artifactId>jmock-legacy</artifactId>
             <version>2.5.1</version>
