--- a/custom_builds/25/distros/2.9.x/pom.xml
+++ b/custom_builds/25/distros/2.9.x/pom.xml
@@ -132,7 +132,7 @@
                 <module>melete</module>
                 <module>hierarchy</module>
                 <module>evaluation</module>
-                <module>gradebook2</module>
+                <!-- <module>gradebook2</module> -->
                 <module>gradebook-export</module>
                 <module>signup</module>
                 <module>ambrosia</module>
