--- a/custom_builds/54/distros/2.9.x/pom.xml
+++ b/custom_builds/54/distros/2.9.x/pom.xml
@@ -131,6 +131,7 @@
                 <module>hierarchy</module>
                 <module>evaluation</module>
                 <module>delegatedaccess</module>
+                <module>da_evalprovider</module>
                 <module>signup</module>
                 <module>bigbluebutton-sakai/bbb-tool</module>
         	<module>etudes-util</module>
