--- a/samigo/samigo-2.9.x_features-backport/samigo-pack/pom.xml
+++ b/samigo/samigo-2.9.x_features-backport/samigo-pack/pom.xml
@@ -60,6 +60,12 @@
 			<artifactId>jsr173</artifactId>
 			<version>1.0_api</version>
 		</dependency>
+
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>samigo-qti</artifactId>
+        </dependency>
+
 	</dependencies>
     
 	<build>
