--- a/custom_builds/25/distros/10.x/pom.xml
+++ b/custom_builds/25/distros/10.x/pom.xml
@@ -115,6 +115,9 @@
                 <module>velocity</module>
                 <module>web</module>
                 <module>webservices</module>
+                <module>blogwow</module>
+                <module>gradebook-export</module>
+                <module>bigbluebutton-sakai/bbb-tool</module>
             </modules>
         </profile>
         <profile>
