--- a/custom_builds/25/jobscheduler/jobscheduler-10.x/scheduler-component-shared/src/java/org/sakaiproject/component/app/scheduler/quartz.properties
+++ b/custom_builds/25/jobscheduler/jobscheduler-10.x/scheduler-component-shared/src/java/org/sakaiproject/component/app/scheduler/quartz.properties
@@ -14,8 +14,9 @@
 #============================================================================
 
 org.quartz.threadPool.class = org.quartz.simpl.SimpleThreadPool
-org.quartz.threadPool.threadCount = 5
+org.quartz.threadPool.threadCount = 2
 org.quartz.threadPool.threadPriority = 5
+org.quartz.threadPool.makeThreadsDaemons=true
 
 #============================================================================
 # Configure JobStore  
