--- a/custom_builds/14/distros/2.9.x/pom.xml
+++ b/custom_builds/14/distros/2.9.x/pom.xml
@@ -135,6 +135,7 @@
                 <module>evaluation</module>
                 <module>etudes-util</module>
                 <module>melete</module>
+                <module>roster2</module>
             </modules>
         </profile>
         <profile>
