SAM-1751 Add Honor Pledge Option like the Assignments Tool has

--- a/samigo/samigo-10.x_features-backport/samigo-app/src/java/org/sakaiproject/tool/assessment/bundle/AssessmentSettingsMessages.properties
+++ b/samigo/samigo-10.x_features-backport/samigo-app/src/java/org/sakaiproject/tool/assessment/bundle/AssessmentSettingsMessages.properties
@@ -25,7 +25,8 @@ settings=Settings
 template_title=Title
 template_authors=Author(s)
 template_description=Description/Intro (optional)
-
+honor_pledge=Honor Pledge
+honor_pledge_add=Add honor pledge
 assessment_title=Title
 assessment_creator=Creator
 assessment_authors=Author(s)
