--- a/samigo/samigo-10.x_features-backport/samigo-app/src/java/org/sakaiproject/tool/assessment/bundle/TemplateMessages.properties
+++ b/samigo/samigo-10.x_features-backport/samigo-app/src/java/org/sakaiproject/tool/assessment/bundle/TemplateMessages.properties
@@ -62,6 +62,8 @@ graphics=Graphics
 graphics_sec=Graphics Section
 high_security=High Security
 high_security_sec=High Security Section
+honor_pledge=Honor Pledge
+honor_pledge_add=Add honor pledge
 sectionlevel_feedback=Selection-Level(A,B,C...) Feedback
 both_feedback=Both
 immediate_feedback=Immediate feedback
