--- a/samigo/samigo-10.x_features-backport/samigo-app/src/java/org/sakaiproject/tool/assessment/bundle/AssessmentSettingsMessages.properties
+++ b/samigo/samigo-10.x_features-backport/samigo-app/src/java/org/sakaiproject/tool/assessment/bundle/AssessmentSettingsMessages.properties
@@ -294,3 +294,5 @@ row_field_empty=Row field can't be empty
 less_than_two_columns=columns field need to have at least two inputs, separated by "Return" key
 selectFromFavorites=Select from Favorites
 
+expandAll=Expand All
+collapseAll=Collapse All
