Some updates for client 104

--- a/custom_builds/103/distros/10.x/pom.xml
+++ b/custom_builds/103/distros/10.x/pom.xml
@@ -119,8 +119,12 @@
                 <module>web</module>
                 <module>webservices</module>
                 <module>evaluation</module>
+                <!--
                 <module>sakai-wicket-for-scorm</module>
                 <module>SCORM.2004.3ED.RTE</module>
+                <module>qna</module>
+                <module>certification</module>
+                -->
             </modules>
         </profile>
         <profile>
