--- a/gradebook-export/gradebook-export-1.5-src/scheduler-jobs/pom.xml
+++ b/gradebook-export/gradebook-export-1.5-src/scheduler-jobs/pom.xml
@@ -18,7 +18,7 @@
   	
 	<dependencies>
 		<dependency>
-			<groupId>org.opensymphony.quartz</groupId>
+			<groupId>org.quartz-scheduler</groupId>
 			<artifactId>quartz</artifactId>
 		</dependency>
 		<dependency>
