Adding sms to externals for qna

--- a/custom_builds/103/distros/10.x/pom.xml
+++ b/custom_builds/103/distros/10.x/pom.xml
@@ -123,6 +123,7 @@
                 <module>sakai-wicket-for-scorm</module>
                 <module>SCORM.2004.3ED.RTE</module>
                 -->
+                <module>sms</module>
                 <module>qna</module>
                 <module>certification</module>
             </modules>
