SAK-26318 Content Review Improvements

--- a/content-review/contentreview-10.x_features-backport/pom.xml
+++ b/content-review/contentreview-10.x_features-backport/pom.xml
@@ -17,6 +17,7 @@
   <modules>
     <module>content-review-api/model</module>
     <module>content-review-api/public</module>
+    <module>contentreview-federated</module>
   </modules>
 
   <scm>
