Adding custom tools for htis build

--- a/custom_builds/14/distros/10.x/pom.xml
+++ b/custom_builds/14/distros/10.x/pom.xml
@@ -118,6 +118,10 @@
                 <module>warehouse</module>
                 <module>web</module>
                 <module>webservices</module>
+                <module>blogwow</module>
+                <module>evaluation</module>
+                <module>content-review/contentreview-impl</module>
+                <module>roster2</module>
             </modules>
         </profile>
         <profile>
