Add Melete to build

--- a/custom_builds/14/distros/10.x/pom.xml
+++ b/custom_builds/14/distros/10.x/pom.xml
@@ -119,6 +119,7 @@
                 <module>blogwow</module>
                 <module>evaluation</module>
                 <module>content-review/contentreview-impl</module>
+                <module>melete</module>
             </modules>
         </profile>
         <profile>
