--- a/custom_builds/10/distros/2.9.x/pom.xml
+++ b/custom_builds/10/distros/2.9.x/pom.xml
@@ -137,6 +137,8 @@
                 <module>mneme</module>
                 <module>ambrosia</module>
                 <module>etudes-util</module>
+                <module>wicket-for-scorm</module>
+                <module>scorm</module>
             </modules>
         </profile>
         <profile>
