adding da_evalprovider

--- a/custom_builds/6/distros/10.x/pom.xml
+++ b/custom_builds/6/distros/10.x/pom.xml
@@ -119,6 +119,7 @@
                 <module>webservices</module>
                 <module>blogwow</module>
                 <module>evaluation</module>
+                <module>da_evalprovider</module>
                 <module>etudes-util</module>
                 <module>melete</module>
                 <module>iclicker</module>
