--- a/webservices/sakai-10.x/cxf/pom.xml
+++ b/webservices/sakai-10.x/cxf/pom.xml
@@ -80,6 +80,10 @@
             <groupId>org.sakaiproject.calendar</groupId>
             <artifactId>sakai-calendar-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.sakaiproject</groupId>
+            <artifactId>sakai-syllabus-api</artifactId>
+        </dependency>
 		<dependency>
 	      	<groupId>org.sakaiproject.shortenedurl</groupId>
 	      	<artifactId>shortenedurl-api</artifactId>
@@ -105,6 +109,10 @@
         <dependency>
           <groupId>org.sakaiproject.samigo</groupId>
           <artifactId>samigo-services</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.sakaiproject.common</groupId>
+            <artifactId>archive-api</artifactId>
         </dependency>
         <dependency>
           <groupId>org.quartz-scheduler</groupId>
