--- a/custom_builds/14/distros/10.x/pom.xml
+++ b/custom_builds/14/distros/10.x/pom.xml
@@ -120,6 +120,7 @@
                 <module>evaluation</module>
                 <module>content-review/contentreview-impl</module>
                 <module>melete</module>
+                <module>etudes-util</module>
             </modules>
         </profile>
         <profile>
