PEPDEV-20 merge CAS and custom string changes from 2.9.x into 10.x branch

--- a/custom_builds/14/login/login-10.x_custom/login-tool/tool/src/bundle/auth.properties
+++ b/custom_builds/14/login/login-10.x_custom/login-tool/tool/src/bundle/auth.properties
@@ -11,7 +11,7 @@ invalid = Invalid
 log.log    = Log in
 log.cancel = Cancel
 log.login  = Login
-log.logreq = Login Required
+log.logreq = Guest Account Login Required
 log.pass   = password
 log.ple    = Please Login
 
