--- a/custom_builds/14/login/login-10.x_custom/login-tool/tool/pom.xml
+++ b/custom_builds/14/login/login-10.x_custom/login-tool/tool/pom.xml
@@ -91,9 +91,9 @@
     	<scope>test</scope>
     </dependency>
       <dependency>
-          <groupId>org.jasig.cas.client</groupId>
-          <artifactId>cas-client-core</artifactId>
-          <version>3.2.1</version>
+          <groupId>cas</groupId>
+          <artifactId>casclient</artifactId>
+          <version>2.2.0-M3</version>
       </dependency>
       <dependency>
           <groupId>org.springframework</groupId>
@@ -149,4 +149,10 @@
   <properties>
   	<maven.test.redirectTestOutputToFile>true</maven.test.redirectTestOutputToFile>
   </properties>
+  <repositories>
+    <repository>
+      <id>jasig</id>
+      <url>http://developer.jasig.org/repo/content/repositories/m2</url>
+    </repository>
+  </repositories>
 </project>
