--- a/custom_builds/122/distros/10.x/pom.xml
+++ b/custom_builds/122/distros/10.x/pom.xml
@@ -116,6 +116,7 @@
                 <module>warehouse</module>
                 <module>web</module>
                 <module>webservices</module>
+                <module>blogwow</module>
             </modules>
         </profile>
         <profile>
