adding tools for this build

--- a/custom_builds/93/builds/10.x/pom.xml
+++ b/custom_builds/93/builds/10.x/pom.xml
@@ -118,6 +118,8 @@
                 <module>warehouse</module>
                 <module>web</module>
                 <module>webservices</module>
+                <module>blogwow</module>
+                <module>evaluation</module>
             </modules>
         </profile>
         <profile>
