svn merge -r310656:311440 https://source.sakaiproject.org/svn/assignment/branches/sakai-10.x/ .

--- a/assignment/assignment-10.x_features-backport/assignment-bundles/resources/assignment.properties
+++ b/assignment/assignment-10.x_features-backport/assignment-bundles/resources/assignment.properties
@@ -919,7 +919,7 @@ peerassessment.cantgradewithdate=Instructor grading is disabled until after the 
 peerassessment.removed=Successfully removed review for student's submission
 peerassessment.restored=Successfully restored review for student's submission
 peerassessment.peerReviewDueDateWithDate=Peer review due date: {0}
-aeerassessment.peerGradeInfo=You are able to accept or override the averaged peer review grade in this section.  Once this grade is released, this is the grade that will appear in the gradebook.
+peerassessment.peerGradeInfo=You are able to accept or override the averaged peer review grade in this section.  Once this grade is released, this is the grade that will appear in the gradebook.
 stuviewsubm.peerreview=Once submitted, this assignment will be part of a peer review.
 stuviewsubm.peerreviewanon=Once submitted, this assignment will be part of an anonymous peer review. Make sure not to include your name in any submission text, files or file names.
 peerassessment.submissionReq=Assignment submission required
@@ -945,3 +945,12 @@ selected.group = Selected Group
 selected.groups = Selected Groups
 
 submission.inline=Inline Submission
+
+assignment.title = Assignment title:
+assignment.inaccessible = This assignment is inaccessible to students because it is released to a group that no longer exists. Edit the assignment and change the 'Access' settings to resolve this issue.
+settings.access.noGroupsPresent = Note - There are currently no groups present in this site. You must first create group(s) before you can release the assignment to selected group(s).
+settings.access.selectedGroupsGoneNoGroups = Note - The previously selected groups no longer exist. 'Display to site' has been selected as the 'Access' option for this assignment. You may post this assignment to the entire site, or cancel and create new groups.
+settings.access.selectedGroupsGoneOtherGroupsPresent = Note - The previously selected groups no longer exist. 'Display to site' has been selected as the 'Access' option for this assignment. You may post this assignment to the entire site, or change the group selections.
+settings.access.selectGroups = Note - You must select at least one group.
+selected.group = Selected Group
+selected.groups = Selected Groups
