--- a/sakai/branches/sakai-10.x/pom.xml
+++ b/sakai/branches/sakai-10.x/pom.xml
@@ -118,6 +118,7 @@
                 <module>warehouse</module>
                 <module>web</module>
                 <module>webservices</module>
+                <module>gradebook-export</module>
             </modules>
         </profile>
         <profile>
