--- a/site-manage/site-manage-10.x_custom/site-manage-tool/tool/src/bundle/sitesetupgeneric.properties
+++ b/site-manage/site-manage-10.x_custom/site-manage-tool/tool/src/bundle/sitesetupgeneric.properties
@@ -1190,3 +1190,29 @@ ediacc.groupEnabledLocalDiabledGlobal = This option has been disabled system-wid
 ediacc.notifyEnabledLocalDisabledGlobal = This option has been disabled system-wide. You will not receive email notifications when someone joins your site.
 ediacc.excludeEnabledLocalDisabledGlobal = This option has been disabled system-wide. This site will appear in the publicly available list of joinable sites.
 ediacc.limitEnabledLocalDisabledGlobal = This option has been disabled system-wide. Any user can join this site. 
+
+# SAK-22384 MathJax support
+sinfo.mathjax.name=LaTeX
+sinfo.mathjax.allowForSite=Allow the display of LaTeX math in this site. Use the Edit Tools page to select the tools for which this setting applies.
+sinfo.mathjax.instructions={0} can display math equations written in LaTeX. Use $$ or \\( and \\) as delimiters around your LaTeX code. Select the tools for which math will be displayed below.
+sinfo.mathjax.confirmEnabled=You have enabled the display of LaTeX math in
+sinfo.mathjax.allowed=Enabled. See the Edit Tools page for the specific tools this setting applies to.
+sinfo.mathjax.notAllowed=Disabled
+
+java.sites.deleted=Softly Deleted Sites
+java.restore=Restore
+
+list.sortbysoftlydeleted=Sort by softly deleted status
+list.softlydeleted=Softly Deleted
+list.restore=Restore
+list.sortbysoftlydeleted.asc = Sort by softly deleted status ascending
+list.sortbysoftlydeleted.desc = Sort by softly deleted status descending
+softly.deleted.already=One or more of the sites you selected are already marked for deletion and have been removed from your selection.
+softly.deleted.already2=The site you chose has not been marked for deletion so no action is necessary.
+softly.deleted.restore.nopermission=You cannot restore that site as you do not have permission.
+softly.deleted.invalidsite=You cannot restore that site as it no longer exists.
+
+# hard delete
+java.delete.hard = Hard Delete
+sitegen.sitedel.hard = NOTE: You chose Hard Delete so these sites will have their tool content purged from the system.
+sitegen.sitedel.hard.button = Hard delete
