--- a/custom_builds/28/distros/10.x/pom.xml
+++ b/custom_builds/28/distros/10.x/pom.xml
@@ -118,6 +118,12 @@
                 <module>warehouse</module>
                 <module>web</module>
                 <module>webservices</module>
+                <module>blogwow</module>
+                <module>content-review/contentreview-impl</module>
+                <module>evaluation</module>
+                <module>etudes-util</module>
+                <module>melete</module>
+                <module>bigbluebutton-sakai/bbb-tool</module>
             </modules>
         </profile>
         <profile>
