--- a/custom_builds/29/web/sakai-10.x/web-tool/tool/src/webapp/WEB-INF/web.xml
+++ b/custom_builds/29/web/sakai-10.x/web-tool/tool/src/webapp/WEB-INF/web.xml
@@ -51,6 +51,61 @@
         <dispatcher>INCLUDE</dispatcher>
     </filter-mapping>
 
+    <filter-mapping>
+        <filter-name>sakai.request</filter-name>
+        <servlet-name>wscc.coursetech</servlet-name>
+        <dispatcher>REQUEST</dispatcher>
+        <dispatcher>FORWARD</dispatcher>
+        <dispatcher>INCLUDE</dispatcher>
+    </filter-mapping>
+
+    <filter-mapping>
+        <filter-name>sakai.request</filter-name>
+        <servlet-name>wscc.helpdesk</servlet-name>
+        <dispatcher>REQUEST</dispatcher>
+        <dispatcher>FORWARD</dispatcher>
+        <dispatcher>INCLUDE</dispatcher>
+    </filter-mapping>
+
+    <filter-mapping>
+        <filter-name>sakai.request</filter-name>
+        <servlet-name>wscc.student</servlet-name>
+        <dispatcher>REQUEST</dispatcher>                                                                                                  
+        <dispatcher>FORWARD</dispatcher>
+        <dispatcher>INCLUDE</dispatcher>
+    </filter-mapping>
+    <filter-mapping>
+        <filter-name>sakai.request</filter-name>
+        <servlet-name>wscc.library</servlet-name>
+        <dispatcher>REQUEST</dispatcher>
+        <dispatcher>FORWARD</dispatcher>
+        <dispatcher>INCLUDE</dispatcher>
+    </filter-mapping>
+
+    <filter-mapping>
+        <filter-name>sakai.request</filter-name>
+        <servlet-name>wscc.mhcampus</servlet-name>
+        <dispatcher>REQUEST</dispatcher>
+        <dispatcher>FORWARD</dispatcher>
+        <dispatcher>INCLUDE</dispatcher>
+    </filter-mapping>
+
+    <filter-mapping>
+        <filter-name>sakai.request</filter-name>
+        <servlet-name>wscc.resources</servlet-name>
+        <dispatcher>REQUEST</dispatcher>
+        <dispatcher>FORWARD</dispatcher>
+        <dispatcher>INCLUDE</dispatcher>
+    </filter-mapping>
+
+    <filter-mapping>
+        <filter-name>sakai.request</filter-name>
+        <servlet-name>wscc.ohiolink</servlet-name>
+        <dispatcher>REQUEST</dispatcher>
+        <dispatcher>FORWARD</dispatcher>
+        <dispatcher>INCLUDE</dispatcher>
+    </filter-mapping>
+
 	<!-- the vm handling servlet : used direct by name, not by URL path -->
 	<servlet>
 		<servlet-name>
@@ -135,6 +190,104 @@
         </init-param>
         <load-on-startup>1</load-on-startup>
      </servlet>
+
+     <servlet>
+        <servlet-name>
+            wscc.coursetech
+        </servlet-name>
+        <servlet-class>
+            org.sakaiproject.web.tool.IFrameAction
+        </servlet-class>
+        <init-param>
+            <param-name>template</param-name>
+            <param-value>web/chef_iframe</param-value>
+        </init-param>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+
+    <servlet>
+        <servlet-name>
+            wscc.helpdesk
+        </servlet-name>
+        <servlet-class>
+           org.sakaiproject.web.tool.IFrameAction
+        </servlet-class>
+       <init-param>
+           <param-name>template</param-name>
+            <param-value>web/chef_iframe</param-value>
+       </init-param>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+
+   <servlet>
+       <servlet-name>
+           wscc.student                                                                                                                    
+       </servlet-name>
+        <servlet-class>
+            org.sakaiproject.web.tool.IFrameAction
+       </servlet-class>
+        <init-param>
+            <param-name>template</param-name>
+           <param-value>web/chef_iframe</param-value>
+        </init-param>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+
+    <servlet>
+        <servlet-name>
+           wscc.library
+        </servlet-name>
+        <servlet-class>
+           org.sakaiproject.web.tool.IFrameAction
+        </servlet-class>
+        <init-param>
+            <param-name>template</param-name>
+            <param-value>web/chef_iframe</param-value>
+        </init-param>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+
+    <servlet>
+        <servlet-name>
+           wscc.mhcampus
+        </servlet-name>
+        <servlet-class>
+            org.sakaiproject.web.tool.IFrameAction
+        </servlet-class>
+        <init-param>
+            <param-name>template</param-name>
+            <param-value>web/chef_iframe</param-value>
+        </init-param>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+
+    <servlet>
+        <servlet-name>
+            wscc.resources
+        </servlet-name>
+        <servlet-class>
+            org.sakaiproject.web.tool.IFrameAction
+        </servlet-class>
+        <init-param>
+            <param-name>template</param-name>
+            <param-value>web/chef_iframe</param-value>
+        </init-param>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+
+     <servlet>
+        <servlet-name>
+            wscc.ohiolink
+        </servlet-name>
+        <servlet-class>
+            org.sakaiproject.web.tool.IFrameAction
+        </servlet-class>
+        <init-param>
+           <param-name>template</param-name>
+           <param-value>web/chef_iframe</param-value>
+        </init-param>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
 
 
     <listener>
