--- a/custom_builds/60/samigo/samigo-10.x_features-backport/samigo-app/src/java/org/sakaiproject/tool/assessment/bundle/EvaluationMessages.properties
+++ b/custom_builds/60/samigo/samigo-10.x_features-backport/samigo-app/src/java/org/sakaiproject/tool/assessment/bundle/EvaluationMessages.properties
@@ -189,6 +189,7 @@ q_emi=Extended Matching Items
 q_short_ess=Short Answer/Essay
 q_tf=True/False Question
 q_matrix_choices_surv=Survey: Matrix of Choices
+q_imq=Hot Spot
 file=File
 browse=Browse
 upload=Upload
@@ -247,6 +248,7 @@ t_fileUpload=Display File Upload
 t_toggleDiv= Expand/Collapse Part
 t_retake=Retake
 t_modelShortAnswer=Model Short Answer
+t_hotspotanswer=Show Student response on image
 # alt tag for images: starts with alt_
 alt_recording=Recording
 alt_correct=Correct
@@ -320,4 +322,7 @@ select_all=Select All
 for_all_sections_groups=for entire site
 for_selected_sections_groups=for selected section(s)/group(s)
 download=Download
+
+show_hotspotanswer=On Image
+
 
