--- a/custom_builds/38/distros/10.x/pom.xml
+++ b/custom_builds/38/distros/10.x/pom.xml
@@ -118,6 +118,9 @@
                 <module>warehouse</module>
                 <module>web</module>
                 <module>webservices</module>
+                <module>blogwow</module>
+                <module>evaluation</module>
+                <module>bigbluebutton-sakai/bbb-tool</module>
             </modules>
         </profile>
         <profile>
