--- a/custom_builds/103/distros/10.x/pom.xml
+++ b/custom_builds/103/distros/10.x/pom.xml
@@ -126,6 +126,7 @@
                 <module>sms</module>
                 <module>qna</module>
                 <module>certification</module>
+                <module>content-review-impl-vericite</module>
             </modules>
         </profile>
         <profile>
