Update from 10.x kernel: Merging r310194 through r312323 into

--- a/kernel/kernel-10.x_backport/component-manager/src/main/bundle/org/sakaiproject/config/kernel.properties
+++ b/kernel/kernel-10.x_backport/component-manager/src/main/bundle/org/sakaiproject/config/kernel.properties
@@ -270,3 +270,6 @@ sakai.X-UA-Compatible=IE=EmulateIE11
 
 # Forced legacy memory use on
 memory.use.legacy=true
+
+#SAK-26567 
+portal.neochat=false
