--- a/custom_builds/68/distros/2.9.x/pom.xml
+++ b/custom_builds/68/distros/2.9.x/pom.xml
@@ -136,8 +136,8 @@
                 <module>gradebook2</module>
                 <module>iclicker</module>
                 <module>melete</module>
-                <module>wicket-for-scorm</module>
-                <module>scorm</module>
+                <!-- module>wicket-for-scorm</module -->
+                <!-- module>scorm</module -->
                 <module>signup</module>
                 <module>bigbluebutton-sakai/bbb-tool</module>
             </modules>
